--- a/conf/newrelic.ini
+++ b/conf/newrelic.ini
@@ -27,7 +27,7 @@
 # You must specify the license key associated with your New
 # Relic account. This key binds the Python Agent's data to your
 # account in the New Relic service.
-license_key = 2d493da95a3c10ef016ac3cf3aa74680f4388046
+# license_key = 
 
 # The appplication name. Set this to be the name of your
 # application as you would like it to show up in New Relic UI.
